--- a/src/app/components/movies/info/info.component.scss
+++ b/src/app/components/movies/info/info.component.scss
@@ -1,32 +1,32 @@
 :host {
   mat-card {
+    border-radius: 5px;
     margin: 10px;
     padding: 0;
     min-height: 55vh;
     background-color: #f8f8f8;
+    box-shadow: 7px 8px 25px #888885;
   }
 
   mat-card mat-card-header {
+    border-radius: 5px;
     width: 100%;
-    background-color: gainsboro;
+    color: #fff;
+    background-color: #004c40;
     height: 60px;
     padding-top: 10px;
     display: flex;
     flex-direction: row;
+    box-shadow: 7px 8px 25px #888885;
+    mat-card-title, mat-card-subtitle {
+      color: #fff !important;
+    }
   }
 
   mat-card mat-card-header mat-card-title {
     color: blue;
     text-align: left;
     width: 100%;
-    // display: inline;
-  }
-
-  mat-card mat-card-header mat-card-subtitle {
-    /*display: inline;
-    float: right;
-    margin-top: 5px;
-    justify-content: end;*/
   }
 
   mat-card-content {
@@ -35,6 +35,7 @@
 
   img {
     width: 200px;
+    border-radius: 50px;
   }
 }
 
