--- a/src/app/components/movies/item/item.component.scss
+++ b/src/app/components/movies/item/item.component.scss
@@ -2,7 +2,10 @@
   mat-card {
     margin-bottom: 10px;
     margin-right: 10px;
-    background-color: gainsboro;
+    background-color: #fff;
+    box-shadow: 7px 8px 5px #888885;
+    border: 1px solid #060606;
+    border-radius: 10px;
   }
 
   mat-card mat-card-header {
