--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,15 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+// Overwrite styles
+.mat-fab.mat-primary, .mat-flat-button.mat-primary, .mat-mini-fab.mat-primary, .mat-raised-button.mat-primary {
+  background: #00796b;
+}
+
+mat-toolbar-row {
+  background: #00796b;
+}
+
+mat-card-title {
+  color:#00796b !important;
+}
