--- a/src/app/components/movies/info/info.component.scss
+++ b/src/app/components/movies/info/info.component.scss
@@ -18,7 +18,7 @@
     display: flex;
     flex-direction: row;
     box-shadow: 7px 8px 25px #888885;
-    mat-card-title, mat-card-subtitle {
+    mat-card-title {
       color: #fff !important;
     }
   }
@@ -34,7 +34,9 @@
   }
 
   img {
-    width: 200px;
+    width: 30%;
+    margin: 0 auto;
+    display: block;
     border-radius: 50px;
   }
 }
