Markup in each page in the movies app

--- a/src/app/components/movies/item/item.component.html
+++ b/src/app/components/movies/item/item.component.html
@@ -6,6 +6,6 @@
     Release Date: {{movie.release | date: 'dd/MM/yyyy'}}
   </mat-card-content>
   <mat-card-actions align="end">
-    <button mat-button (click)="delete()"><mat-icon>Remove</mat-icon></button>
+    <button mat-button (click)="delete()"><mat-icon>delete</mat-icon></button>
   </mat-card-actions>
 </mat-card>
