--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -16,8 +16,7 @@
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
-    <div style="height: 88vh; padding: 1vw">
-
+    <div class="router-container">
       <router-outlet></router-outlet>
     </div>
   </mat-sidenav-content>
